<resources>
    <string name="app_name">"" My ToDo</string>
    <string name="action_settings">Settings</string>

    <string name="dueDateHint">Task Date</string>
    <string name="taskNameHint">Task Name</string>
    <string name="priorityText">Priority</string>
    <string name="lowButtonText">Low</string>
    <string name="mediumButtonText">Medium</string>
    <string name="highButtonText">High</string>
    <string name="urgentButtonText">Urgent</string>
    <string name="submitButtonText">Submit</string>
    <string name="removeButtonText">REMOVE</string>

</resources>

